# personaAI

./: .gitignore  LICENSE  README.md
analysis/: _verification_report_template.md
analysis/cirbp_liver_single_cell/: README.md  data_manifest.tsv  methods_draft.md
analysis/cirbp_liver_single_cell/results/: age_trajectory.tsv  cell_type_expression.tsv  cirbp_liver_verification_report.md  evidence_grading.tsv  reproduction_check.json  young_old_contrast.tsv
analysis/cirbp_liver_single_cell/scripts/: _crosscheck_lib.py  crosscheck.py  run_mcp_report.py
analysis/creld2_human_genetics/: README.md  data_manifest.tsv  methods_draft.md
analysis/creld2_human_genetics/results/: creld2_coloc_abf.tsv  creld2_mr_lead_wald.tsv  creld2_verification_report.md  pqtl_locus_manifest.tsv
analysis/creld2_human_genetics/scripts/: plot_creld2_summary.py  run_creld2_coloc_abf.R  run_creld2_pqtl_followup.py
analysis/pgat_aspc_single_cell/: README.md  data_manifest.tsv  methods_draft.md
analysis/pgat_aspc_single_cell/results/: pgat_aspc_verification_report.md  reproduction_check.json
analysis/pgat_aspc_single_cell/results/cci/: female_compare.json  male_compare.json  target_pairs_compare.tsv
analysis/pgat_aspc_single_cell/results/female/: age_trajectory.tsv  cell_type_expression.tsv  evidence_grading.tsv  young_old_contrast.tsv
analysis/pgat_aspc_single_cell/results/male/: age_trajectory.tsv  cell_type_expression.tsv  young_old_contrast.tsv
analysis/pgat_aspc_single_cell/scripts/: _crosscheck_lib.py  crosscheck.py  run_mcp_cci.py  run_mcp_report.py
docs/: agent_assistance_disclosure.md  contribution_guide.md  supplementary_table6_human_genetics_workflow.tsv  table1_llm_scoring_rubric.md
personaai/rag/: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  langgraph.json  pyproject.toml  run_full_indexing.py
personaai/rag/backend/: .env.example
personaai/rag/backend/agent/: graph.py  nodes.py  state.py  utils.py
personaai/rag/backend/tools/: __init__.py  http_embeddings.py  news.py  retrieval.py  tavily.py
personaai/rag/backend/tools/base/: retriever_base.py
personaai/scrna_mcp/: README.md
personaai/scrna_mcp/aging_atlas_mcp/: .gitignore  GENE_FILTERING_GUIDE.md  README.md  requirements.txt  setup.py  test_api.py
personaai/scrna_mcp/aging_atlas_mcp/config/: claude_desktop.json
personaai/scrna_mcp/aging_atlas_mcp/docs/: QUICKSTART.md  README.md
personaai/scrna_mcp/aging_atlas_mcp/scripts/: run.sh
personaai/scrna_mcp/aging_atlas_mcp/src/aging_atlas_mcp/: __init__.py  __main__.py  config.py  server.py
personaai/scrna_mcp/aging_atlas_mcp/tests/: __init__.py  test_server.py
personaai/scrna_mcp/cci_analysis_mcp/: README.md  pyproject.toml
personaai/scrna_mcp/cci_analysis_mcp/cci_analysis_mcp/: __init__.py  server.py
personaai/scrna_mcp/cci_analysis_mcp/cci_analysis_mcp/tools/: __init__.py  cci_tools.py
personaai/scrna_mcp/sc_analysis_mcp/: INSTALL.md  README.md  pyproject.toml
personaai/scrna_mcp/sc_analysis_mcp/docs/: scrna_aging_atlas_report_runner.md
personaai/scrna_mcp/sc_analysis_mcp/examples/: cirbp_liver_hypothesis.md
personaai/scrna_mcp/sc_analysis_mcp/sc_analysis_mcp/: __init__.py  h5ad_compat.py  scrna_report_runner.py  server.py
personaai/scrna_mcp/sc_analysis_mcp/sc_analysis_mcp/tools/: __init__.py  aging_analysis.py  clustering.py  deg_analysis.py  dimensionality.py  integration.py  preprocessing.py  visualization.py
personaai/scrna_mcp/sc_analysis_mcp/tests/: test_aging_deg.py  test_h5ad_compat.py  test_scrna_report_runner.py
protocols/: aging_atlas_evaluation_protocol.md  human_genetics_evaluation_protocol.md  protocol_library_manifest.tsv
protocols/aging_atlas_skill_cards/: evidence_grading.md  feasibility_assessment.md  gap_oriented_sensitivity.md  hypothesis_structuring.md  single_cell_execution.md  verification_report_authoring.md
protocols/human_genetics_skill_cards/: evidence_grading.md  feasibility_assessment.md  gap_oriented_sensitivity.md  hypothesis_structuring.md  statistical_genetics_execution.md  verification_report_authoring.md
protocols/rag/: prompt_and_tool_disclosure.md  rag_protocol.md  retrieval_corpus_manifest.tsv
