[project]
name = "rag-fpp"
version = "0.1.0"
description = "RAG agent (LangGraph) — reproducible code accompanying the arXiv paper"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "blockbuster==1.5.26",
    "bs4==0.0.2",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "coloredlogs==15.0.1",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "feedparser==6.0.12",
    "filelock==3.20.1",
    "filetype==1.2.0",
    "flashrank==0.2.10",
    "flatbuffers==25.12.19",
    "forbiddenfruit==0.1.4",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "google-api-core==2.28.1",
    "google-auth==2.45.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "grpcio-tools==1.75.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema-rs==0.29.1",
    "langchain==1.2.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.4",
    "langchain-experimental==0.4.1",
    "langchain-huggingface==1.2.0",
    "langchain-openai==1.1.6",
    "langchain-qdrant==1.1.0",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.5",
    "langgraph-api==0.6.11",
    "langgraph-checkpoint==3.0.1",
    "langgraph-cli==0.4.11",
    "langgraph-prebuilt==1.0.5",
    "langgraph-runtime-inmem==0.20.1",
    "langgraph-sdk==0.3.1",
    "langsmith==0.5.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "onnxruntime==1.23.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "packaging==25.0",
    "portalocker==3.2.0",
    "propcache==0.4.1",
    "proto-plus==1.27.0",
    "protobuf==6.33.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "qdrant-client==1.16.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sentence-transformers==5.2.0",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.45",
    "sse-starlette==2.1.3",
    "starlette==0.50.0",
    "structlog==25.5.0",
    "sympy==1.14.0",
    "tavily==1.1.0",
    "tavily-python==0.7.17",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.5.1",
    "truststore==0.10.4",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

# ---------------------------------------------------------------------------
# Reproducibility notes
# ---------------------------------------------------------------------------
# Every dependency below is pinned to an exact version, matching the verified
# environment used to produce the paper results. The accompanying `uv.lock`
# additionally records the full transitive graph with content hashes.
#
# To recreate the exact environment:
#     uv sync --locked
#
# The Python interpreter is pinned to 3.12 via `.python-version`; `uv` will
# fetch that exact interpreter automatically.
# ---------------------------------------------------------------------------

[tool.uv]
# This is an application (run via `langgraph`), not an installable library,
# so the project itself is not built/installed into the environment.
package = false
