[project]
name = "cci-analysis-mcp"
version = "1.0.0"
description = "MCP server for cell-cell interaction analysis (LIANA+) with aging hypothesis validation"
authors = [{name = "KJ Lab, Cedars-Sinai Medical Center"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "liana>=1.0.0",
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotnine>=0.12.0",
    "decoupler>=1.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cci_analysis_mcp"]

[project.scripts]
cci-analysis-mcp = "cci_analysis_mcp.server:main"
